--- a/EJM223-group.ipynb
+++ b/EJM223-group.ipynb
@@ -33,7 +33,7 @@
     "#makes 8 by 8 fig and ax\n",
     "fig, ax = plt.subplots(1, 1, figsize = (8,8))\n",
     "#gets the color through count, adds a legend to the side and labels it Total Number of Parks and have it in shades of blue with black edges\n",
-    "neighborhood.plot(column = 'count',ax=ax, legend = True, legend_kwds= {\"label\": \"Total Number of Parks\"},cmap = 'Blues', edgecolor = 'black')\n",
+    "neighborhood.plot(column = 'count',ax=ax, legend = True, legend_kwds= {\"label\": \"Total Number of Parks\"},cmap = 'Greens', edgecolor = 'black')\n",
     "#axis wouldnt make sense \n",
     "ax.set_axis_off()\n",
     "#prints\n",
